[project]
name = "comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pydicom>=3.0.1",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
